# open5gs

./: .gitignore  meson.build
configs/: non3gpp.yaml.in
lib/: meson.build
lib/app/: ogs-context.c
lib/core/: meson.build  ogs-3gpp-types.c  ogs-3gpp-types.h  ogs-fsm.h  ogs-pkbuf.c  pcs-thread-pool.h
lib/gtp/: context.c  message.c  message.h
lib/pcs/: meson.build  pcs-thread-pool.h
lib/pfcp/: context.c  message.c  message.h
src/amf/: amf-sm.c  context.c  context.h  gmm-build.c  gmm-handler.c  gmm-handler.h  gmm-sm.c  init.c  meson.build  namf-handler.c  namf-handler.h  nausf-handler.c  ngap-handler.c  ngap-handler.h  ngap-sm.c  nsmf-build.c  nsmf-handler.c  nsmf-handler.h  pcs-helper.c  pcs-helper.h  pcs-mongo.c  pcs-mongo.h  pcs-thread-pool.c
src/ausf/: ausf-sm.c
src/bsf/: bsf-sm.c  nbsf-handler.c
src/hss/: hss-fd-path.c  hss-swx-path.c
src/mme/: mme-s11-build.c
src/nrf/: nrf-sm.c
src/nssf/: nssf-sm.c
src/pcf/: pcf-sm.c
src/smf/: context.c  context.h  fd-path.c  gsm-build.c  gsm-build.h  gsm-sm.c  init.c  meson.build  n4-build.c  n4-handler.c  n4-handler.h  namf-build.c  namf-handler.c  namf-handler.h  npcf-handler.c  npcf-handler.h  nsmf-handler.c  nsmf-handler.h  nudm-handler.c  nudm-handler.h  pcs-helper.c  pcs-helper.h  pcs-mjson.c  pfcp-sm.c  s5c-build.c  s5c-handler.c  smf-sm.c
src/udm/: udm-sm.c
src/udr/: udr-sm.c
src/upf/: context.h  init.c  meson.build  n4-handler.c  n4-handler.h  pcs-helper.c  pcs-helper.h  pfcp-sm.c  upf-sm.c
tests/310014/: epc-test.c
tests/attach/: auth-test.c  emm-status-test.c  guti-test.c  idle-test.c  (+2 more)
(+46 files in other folders)
